--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Yo la Street</h1>
-    <p>le visio c'est nul</p>
+    <p>Salut mon petit jérome</p>
     
 </body>
 </html>
