--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Yo la Street</h1>
     <p>Salut mon petit jérome</p>
+    <img src="/asset/img/jerome.jfif" alt="">
     
 </body>
 </html>
