--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1>Yo la Street</h1>
     <p>Salut mon petit jérome</p>
     <img src="/asset/img/jerome.jfif" alt="">
+
+    <h2>Les gens en VISIO</h2>
+    <img src="/asset/img/chevy-chase.gif" alt="">
     
 </body>
 </html>
